<resources>
    <string name="app_name">ID Dog</string>
    <string name="developer_name">Jonas Vieira</string>
    <string name="icon_app">icon app</string>
    <string name="acessar">Acessar</string>
    <string name="digite_seu_e_mail">Digite seu e-mail:</string>
    <string name="id_dog">ID Dog</string>
    <string name="info_acessar">Para acessar, insira abaixo um e-mail válido</string>
    <string name="sem_conexao">Ops, parece que você não está conectado à internet</string>
    <string name="title_activity_feed">feedActivity</string>
    <string name="ola_bem_vindo">Olá, Bem vindo!</string>
    <string name="ola">Olá,</string>
    <string name="bemvindo">Bem vindo!</string>
    <string name="toolbarTitle">Meu Feed</string>
    <string name="husky">Husky</string>
    <string name="labrador">Labrador</string>
    <string name="hound">Hound</string>
    <string name="pug">Pug</string>
    <string name="logout">Logout</string>
    <string name="placeholder_dog">placeholder dog</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="image_dog_expanded">image dog expanded</string>
    <string name="email_vazio">Campo obrigatório, insira um e-mail válido</string>
    <string name="email_invalido">E-mail invalido, verifique o endereço digitado e tente novamente</string>
    <string name="erro_banco">Ops... Ocorreu um erro ao buscar seus dados no banco</string>
    <string name="erro_salvar_banco">Ops... Ocorreu um erro ao salvar seus dados, tente novamente!</string>
</resources>
